crates/envoy-config/fuzz/corpus/parse_bootstrap/and_or_filter.yaml
node: { id: fuzz-73, cluster: fuzz-73 }
static_resources:
  listeners:
    - name: l1
      address: { socket_address: { address: 127.0.0.1, port_value: 10000 } }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: HTTP1
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/fuzz-access.log
                    filter:
                      or_filter:
                        filters:
                          - and_filter:
                              filters:
                                - header_filter: { header: { name: x-a, string_match: { exact: "1" } } }
                                - header_filter: { header: { name: x-b, string_match: { exact: "1" } } }
                          - header_filter: { header: { name: x-c, string_match: { exact: "1" } } }
                route_config:
                  name: r
                  virtual_hosts:
                    - name: v
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          direct_response: { status: 503, body: { inline_string: "fuzz\n" } }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters: []
